--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -32,8 +32,13 @@ const { showHeader = true, ...head } = Astro.props;
             <Footer />
         </div>
         <script>
+            declare global {
+                interface Window {
+                    netlifyIdentity: any;
+                }
+            }
             if (window.netlifyIdentity) {
-                window.netlifyIdentity.on('init', (user) => {
+                window.netlifyIdentity.on('init', (user: any) => {
                     if (!user) {
                         window.netlifyIdentity.on('login', () => {
                             document.location.href = '/admin/';
