--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,8 +14,7 @@ const { showHeader = true, ...head } = Astro.props;
 <html lang="en" class="antialiased break-words">
     <head>
         <BaseHead {...head} />
-        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-        <script>
+        <script is:inline>
             if (localStorage.theme === 'dark') {
                 document.documentElement.classList.add('dark');
             }
@@ -31,14 +30,10 @@ const { showHeader = true, ...head } = Astro.props;
             </main>
             <Footer />
         </div>
-        <script>
-            declare global {
-                interface Window {
-                    netlifyIdentity: any;
-                }
-            }
+        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" is:inline></script>
+        <script is:inline>
             if (window.netlifyIdentity) {
-                window.netlifyIdentity.on('init', (user: any) => {
+                window.netlifyIdentity.on('init', (user) => {
                     if (!user) {
                         window.netlifyIdentity.on('login', () => {
                             document.location.href = '/admin/';
